force-app/main/default/objects/Discount_Type__c/Discount_Type__c.object-meta.xml
<CustomObject>
    <label>Discount Type</label>
    <nameField>
        <label>Discount Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>