force-app/main/default/objects/Discount_Type__c/fields/Discount_Period__c.field-meta.xml
<CustomField>
    <fullName>Discount_Period__c</fullName>
    <label>Discount Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day of Week</fullName>
                <label>DayOfWeekDiscountStrategy</label>
            </value>
            <value>
                <fullName>Month</fullName>
                <label>MonthlyDiscountStrategy</label>
            </value>
            <value>
                <fullName>Specific DD</fullName>
                <label>SpecificDayDiscountStrategy</label>
            </value>
            <value>
                <fullName>Specific DD.MM</fullName>
                <label>SpecificDayMonthDiscountStrategy</label>
            </value>
            <value>
                <fullName>Specific Date Range</fullName>
                <label>DateRangeDiscountStrategy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>