force-app/main/default/objects/Discount_Type__c/fields/Recurring_Discount__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Discount</label>
    <type>Checkbox</type>
</CustomField>