force-app/main/default/objects/Discount_Type__c/fields/Specific_Day__c.field-meta.xml
<CustomField>
    <fullName>Specific_Day__c</fullName>
    <label>Specific Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>