force-app/main/default/objects/Discount_Type__c/fields/Specific_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Specific_Day_Month__c</fullName>
    <label>Specific Day/Month</label>
    <length>5</length>
    <type>Text</type>
</CustomField>